--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -8,13 +8,13 @@
     <div class="field">
         <div class="control">
             <label class="label">氏名</label>
-            <input class="input" type="text" name="name" id="name" placeholder="氏名" [(ngModel)]="emp.name" #name="ngModel">
+            <input class="input" type="text" name="name" id="name" placeholder="氏名" [(ngModel)]="emp.name" #name="ngModel" required>
         </div>
     </div>
     <div class="field">
         <div class="control">
             <label class="label">年齢</label>
-            <input class="input" type="number" name="age" id="age" placeholder="年齢" [(ngModel)]="emp.age" #age="ngModel">
+            <input class="input" type="number" name="age" id="age" placeholder="年齢" [(ngModel)]="emp.age" #age="ngModel" required>
         </div>
     </div>
     <div class="field">
@@ -29,6 +29,6 @@
         </label>
     </div>
     <div>
-        <input class="button" type="submit" value="登録" [disabled]="myForm.invalid">
+        <input class="button" type="submit" value="登録" [disabled]="myForm.invalid" required>
     </div>
 </form>
