--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -4,7 +4,7 @@
       <th>従業員No.</th>
       <th>氏名</th>
       <th>年齢</th>
-      <th>部署</th>
+      <th>性別</th>
       <th></th>
     </tr>
   </thead>
@@ -13,7 +13,7 @@
       <td><a routerLink="/emp/{{emp.id}}">{{emp.id}}</a></td>
       <td>{{emp.name}}</td>
       <td>{{emp.age}}</td>
-      <td>{{emp.dept}}</td>
+      <td>{{emp.sex === '1' ? '男' : '女'}}</td>
       <td><button class="button is-danger is-small" (click)="delete(emp.id)">削除</button></td>
     </tr>
   </tbody>
